# lyrics-discovery

./: .gitignore  CLAUDE.md  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  config.py  graph.py  logging_config.py  main.py  state.py  web_ui.py  web_ui_simple.py
src/nodes/: __init__.py  analysis.py  extract_lyrics.py  facts.py  formatting.py  search.py  translation.py
src/resources/: __init__.py  defaults.py  init_curious.txt  init_lyrics.txt  init_progress.txt  init_query.txt
tests/: test_content_filter_issue.py  test_filter_node.py  test_nodes.py  test_raw_content_improvement.py  test_web_ui.py
