[project]
name = "ai-lyrics-finder"
version = "0.3.0"
description = "A LangGraph agent to find, format, and translate song lyrics."
requires-python = ">=3.13"
dependencies = [
    "langgraph",
    "wikipedia",
    "gradio>=5.46.1",
    "langchain-openai>=0.3.33",
    "langchain-community>=0.3.29",
    "langchain-tavily>=0.2.11",
    "redis>=6.4.0",
    "langchain-redis>=0.2.3",
    "tavily-python>=0.7.12",
]

[project.scripts]
find-lyrics-graph = "lyrics_graph:main"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
